be less aggressive